[Feat/#1]: 약관 팝업 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,8 +29,6 @@
     -o-user-drag: none;
   }
   button {
-    background: none;
-    border: none;
     box-sizing: content-box;
     cursor: pointer;
   }
@@ -54,6 +52,7 @@ body {
 
   margin: 0;
   width: 100vw;
+  position: relative;
 
   /* mobile view setting */
   height: fit-content;
