--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,12 @@
   }
 }
 
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 html {
   background-color: rgb(241, 241, 241);
   width: 100vw;
