[Feat/#11]: 이용약관 마크다운 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,41 @@ input[type='date']::-ms-expand {
     brightness(94%) contrast(88%);
   cursor: pointer;
 }
+
+.prose {
+  color: #0e0e0e;
+
+  gap: 0;
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+  ol {
+    margin: 0;
+    padding: 0 0 0 18px;
+
+    li {
+      margin: 0;
+      padding: 0;
+
+      &::marker {
+        color: #0e0e0e;
+      }
+    }
+  }
+
+  ul {
+    margin: 0;
+    padding: 0 0 0 18px;
+
+    li {
+      margin: 0;
+      padding: 0;
+
+      &::marker {
+        color: #0e0e0e;
+      }
+    }
+  }
+}
