[Feat/#24]: 테스트 결과 기반 추천 도서 아이템 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import url('../styles/components.css');
 @import url('../styles/inputs.css');
 @import url('../styles/markdown.css');
+@import url('../styles/tags.css');
 
 @tailwind base;
 @tailwind components;
