--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -3,4 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+  .button {
+    @apply box-border w-full rounded-[30px] bg-main px-[30px] py-[18px] text-body_lg_bold text-white transition-all;
+  }
+  .button-disabled {
+    @apply pointer-events-none opacity-[0.4];
+  }
 }
