--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 255, 255;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -51,7 +46,7 @@ input[type='number'] {
 }
 
 html {
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -62,10 +57,6 @@ html {
 }
 
 body {
-  /* basic setting */
-  color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb));
-
   margin: 0;
   width: 100vw;
   position: relative;
@@ -77,7 +68,6 @@ body {
   display: flex;
   justify-content: center;
 
-  background-color: white;
   overscroll-behavior-y: none;
   overflow: auto;
 
