--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,8 @@ body {
   min-height: 100dvh;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   overscroll-behavior-y: none;
   overflow: auto;
