--- a/src/styles/tags.css
+++ b/src/styles/tags.css
@@ -3,16 +3,22 @@
 @tailwind utilities;
 
 @layer components {
-  .tag-common {
+  .major-tag-common {
     @apply w-fit rounded-[8px] border-[0.5px] px-[12px] py-[6px] text-caption_bold;
   }
-  .default-tag {
+  .major-default-tag {
     @apply border-gray-600 bg-gray-300 text-gray-600;
   }
   .pro-tag {
-    @apply bg-main_bg border-main text-main;
+    @apply border-main bg-main_bg text-main;
   }
   .con-tag {
-    @apply bg-error_bg_light border-error text-error;
+    @apply border-error bg-error_bg_light text-error;
+  }
+  .tag-common {
+    @apply w-fit rounded-[12px] border px-[16px] py-[8px] text-body_lg_bold;
+  }
+  .tag-not-selected {
+    @apply border-gray-300 bg-gray-300 text-gray-600;
   }
 }
