--- a/src/styles/tags.css
+++ b/src/styles/tags.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/components';
 
 @layer components {
   .major-tag-common {
