--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,9 +7,9 @@
 }
 
 .half-gradient {
-  background-color: #0e0e0e;
+  /* background-color: #0e0e0e; */
   background-image: linear-gradient(to bottom, #0e0e0e 50%, white 50%);
-  background-image: -webkit-linear-gradient(to bottom, #0e0e0e 50%, white 50%);
+  /* background-image: -webkit-linear-gradient(to bottom, #0e0e0e 50%, white 50%);
   background-image: -moz-linear-gradient(to bottom, #0e0e0e 50%, white 50%);
-  background-image: -o-linear-gradient(to bottom, #0e0e0e 50%, white 50%);
+  background-image: -o-linear-gradient(to bottom, #0e0e0e 50%, white 50%); */
 }
