[Style/#33]: textarea ui 구현

--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -20,4 +20,8 @@
   .input-code-error {
     @apply pointer-events-none border-error bg-error_bg text-gray-500 placeholder:text-gray-500;
   }
+
+  .textarea-default {
+    @apply resize-none rounded-[12px] border-gray-200 bg-gray-200 px-[16px] py-[18px] text-body_lg text-gray-800 placeholder:text-gray-600 focus:outline-none;
+  }
 }
