[Feat/#34]: review list 생성, tap layout 통일

--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -4,4 +4,7 @@
   .form-layout {
     @apply flex flex-1 flex-col justify-between gap-[24px];
   }
+  .tap-content-layout {
+    @apply flex h-fit w-full flex-1 flex-col items-center gap-[36px] bg-white p-[24px] text-gray-800;
+  }
 }
