--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -5,6 +5,6 @@
     @apply flex flex-1 flex-col justify-between gap-[24px];
   }
   .tap-content-layout {
-    @apply flex h-fit w-full flex-1 flex-col items-center gap-[36px] bg-white p-[24px] text-gray-800;
+    @apply flex h-fit w-full flex-1 flex-col items-center bg-white text-gray-800;
   }
 }
