--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* type=date input icon 색상 세팅 */
