--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -4,7 +4,7 @@
   .form-layout {
     @apply flex flex-1 flex-col justify-between gap-[24px];
   }
-  .tap-content-layout {
-    @apply flex h-fit w-full flex-1 flex-col items-center bg-white text-gray-800;
+  .flex-child-layout {
+    @apply flex h-fit w-full flex-col items-center bg-white text-gray-800;
   }
 }
