--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -20,4 +20,7 @@
     /* 별개로 지정해야 하는 속성 - top || bottom, border-[width], border-[color]*/
     @apply after:absolute after:left-1/2 after:h-0 after:w-0 after:-translate-x-[50%] after:rotate-45 after:border-solid;
   }
+  .review-item {
+    @apply flex w-full flex-col gap-[20px] rounded-[20px] bg-white px-[24px] py-[36px] text-gray-800;
+  }
 }
