[Refactor/#35]: button class 분리

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 @import url('../styles/tags.css');
 @import url('../styles/layouts.css');
 @import url('../styles/theme.css');
+@import url('../styles/buttons.css');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
