--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,4 +1,6 @@
-@import 'tailwindcss/components';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer components {
   .form-layout {
@@ -6,12 +8,6 @@
   }
   .flex-child-layout {
     @apply flex h-fit w-full flex-col items-center bg-white text-gray-800;
-  }
-  .absolute-fit {
-    @apply absolute left-0 top-0;
-  }
-  .absoulte-fit-bottom {
-    @apply absolute bottom-0 left-0;
   }
   .flex-center {
     @apply flex items-center justify-center;
