--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @import url('../styles/layouts.css');
 @import url('../styles/theme.css');
 @import url('../styles/buttons.css');
+@import url('../styles/text.css');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
