--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -14,6 +14,13 @@
     /* 별개로 지정해야 하는 속성 - top || bottom, border-[width], border-[color]*/
     @apply after:absolute after:left-1/2 after:-z-0 after:h-0 after:w-0 after:-translate-x-[50%] after:rotate-45 after:border-solid;
   }
+  .tooltip-feed {
+    @apply after:absolute after:-top-[23px] after:left-[31px] after:h-0 after:w-0 after:rotate-0 after:border-solid after:border-transparent;
+
+    &::after {
+      border-width: 0 13.5px 23.4px 13.5px;
+    }
+  }
   .review-item {
     @apply flex w-full flex-col gap-[20px] rounded-[20px] bg-white px-[24px] py-[36px] text-gray-800 last:rounded-b-none;
   }
