--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -14,7 +14,7 @@
   }
 
   .input-light {
-    @apply border-gray-200 bg-gray-200;
+    @apply border-gray-200 bg-gray-200 text-gray-800 placeholder:text-gray-600 focus:border-main;
   }
 
   .input-code-common {
