[Feat/#43]: 우물 진입 모션

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ html {
 
   @media screen and (min-width: 430px) {
     overflow: hidden;
-    background-color: black;
+    background-color: #0e0e0e;
   }
 }
 
