--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -26,6 +26,14 @@
   }
 
   .textarea-common {
-    @apply w-full resize-none whitespace-pre-wrap rounded-[12px] border px-[16px] py-[18px] text-body_lg text-gray-800 placeholder:text-gray-600 focus:outline-none;
+    @apply w-full resize-none whitespace-pre-wrap border px-[24px] py-[28px] text-body_lg text-gray-800 placeholder:text-gray-600 focus:outline-none;
+  }
+
+  .textarea-common::placeholder {
+    @apply text-body_lg font-normal;
+  }
+
+  .textarea-light {
+    @apply border-gray-200 bg-gray-200 text-gray-800 placeholder:text-gray-600;
   }
 }
