--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .button-common {
-    @apply relative z-10 box-border w-full rounded-[30px] px-[30px] py-[18px] text-body_lg_bold transition-all;
+    @apply text-body-lg-bold relative z-10 box-border w-full rounded-[30px] px-[30px] py-[18px] transition-all;
   }
   .button-main {
     @apply button-common bg-main text-white;
