--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -5,7 +5,7 @@
     @apply flex flex-col items-center gap-[4px];
   }
   .tooltip {
-    @apply absolute bottom-[-52px] right-[-10px] rounded-[12px] bg-gray-300 p-[12px] text-center text-body_sm text-gray-800 after:absolute after:right-[15px] after:top-[-5px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-300;
+    @apply text-body-sm absolute bottom-[-52px] right-[-10px] rounded-[12px] bg-gray-300 p-[12px] text-center text-gray-800 after:absolute after:right-[15px] after:top-[-5px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-300;
   }
   .circle {
     @apply absolute h-[320px] w-[320px] rounded-[50%] border-2 border-main_bright bg-none;
@@ -22,7 +22,7 @@
     }
   }
   .tooltip-no-book {
-    @apply absolute right-[-3px] top-[-90px] w-[100px] rounded-[20px] bg-gray-800 px-[16px] py-[12px] text-center text-body_lg text-white after:absolute after:bottom-[-7px] after:right-[17px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-800;
+    @apply text-body-lg absolute right-[-3px] top-[-90px] w-[100px] rounded-[20px] bg-gray-800 px-[16px] py-[12px] text-center text-white after:absolute after:bottom-[-7px] after:right-[17px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-800;
   }
   .review-item {
     @apply flex w-full flex-col gap-[20px] rounded-[20px] bg-white px-[24px] py-[36px] text-gray-800 last:rounded-b-none;
