[Feat/#45]: skeleton 구현, memo list 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 @import url('../styles/theme.css');
 @import url('../styles/buttons.css');
 @import url('../styles/text.css');
+@import url('../styles/skeleton.css');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
