[API/#48]: 팔로우 API 연동 및 opticmistic update 적용

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -33,4 +33,10 @@
   .user-type-chip-disabled {
     @apply w-fit whitespace-nowrap rounded-[12px] bg-gray-200 px-[22px] py-[8px] text-body-lg-bold text-gray-500;
   }
+  .not-following-tag {
+    @apply rounded-[12px] border border-gray-400 bg-white px-[16px] py-[8px] text-body-sm-bold text-gray-600;
+  }
+  .following-tag {
+    @apply rounded-[12px] border border-main bg-white px-[16px] py-[8px] text-body-sm-bold text-main;
+  }
 }
