--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 @import url('../styles/buttons.css');
 @import url('../styles/text.css');
 @import url('../styles/skeleton.css');
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
@@ -122,4 +124,17 @@ input[type='date']::-ms-expand {
   filter: invert(74%) sepia(6%) saturate(146%) hue-rotate(184deg)
     brightness(94%) contrast(88%);
   cursor: pointer;
+}
+
+.slick-track {
+  /* width: 100%; */
+  height: 100%;
+}
+
+.slick-slide {
+  height: 100%;
+}
+
+.slick-slide > div {
+  height: 100%;
 }
