--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -39,4 +39,10 @@
   .following-tag {
     @apply rounded-[12px] border border-main bg-white px-[16px] py-[8px] text-body-sm-bold text-main;
   }
+  .active-circle {
+    @apply h-[8px] w-[8px] rounded-[50%] bg-main;
+  }
+  .non-active-circle {
+    @apply h-[8px] w-[8px] rounded-[50%] border-[1.2px] border-gray-600;
+  }
 }
