[Feat/#48]: 피드 pull to refresh 구현

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -45,4 +45,17 @@
   .non-active-circle {
     @apply h-[8px] w-[8px] rounded-[50%] border-[1.2px] border-gray-600;
   }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .spinner {
+    animation: spin 1s linear infinite;
+  }
 }
