[Feat/#54]: 우물, 페이지 헤더 svg 제거 및 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 @import url('../styles/buttons.css');
 @import url('../styles/text.css');
 @import url('../styles/skeleton.css');
+@import url('../styles/header.css');
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 
