--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 @import url('../styles/text.css');
 @import url('../styles/skeleton.css');
 @import url('../styles/header.css');
+@import url('../styles/book.css');
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 
