[Setting/#67]: 기타 css 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,7 +100,7 @@ body {
   padding-bottom: calc(env(safe-area-inset-bottom) + 10px);
 }
 
-#side-header {
+.safe-header {
   top: constant(safe-area-inset-top);
   top: env(safe-area-inset-top);
 }
