--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .input-common {
-    @apply text-body-lg rounded-[12px] border px-[16px] py-[18px] outline-none focus:outline-none;
+    @apply rounded-[12px] border px-[16px] py-[18px] text-body-lg outline-none focus:outline-none;
   }
 
   .input-default {
@@ -10,15 +10,19 @@
   }
 
   .input-error {
-    @apply border-error bg-error_bg;
+    @apply border-error bg-error_bg focus:border-error;
   }
 
   .input-light {
     @apply border-gray-200 bg-gray-200 text-gray-800 placeholder:text-gray-600 focus:border-main;
   }
 
+  .input-light-error {
+    @apply border-error bg-error_bg placeholder:text-gray-800 focus:border-error;
+  }
+
   .input-code-common {
-    @apply text-body-lg w-full rounded-[12px] border px-[16px] py-[18px] pr-[110px] outline-none focus:outline-none;
+    @apply w-full rounded-[12px] border px-[16px] py-[18px] pr-[110px] text-body-lg outline-none focus:outline-none;
   }
 
   .input-code-error {
@@ -26,7 +30,7 @@
   }
 
   .textarea-common {
-    @apply text-body-lg w-full resize-none whitespace-pre-wrap border px-[24px] py-[28px] text-gray-800 placeholder:text-gray-600 focus:outline-none;
+    @apply w-full resize-none whitespace-pre-wrap border px-[24px] py-[28px] text-body-lg text-gray-800 placeholder:text-gray-600 focus:outline-none;
   }
 
   .textarea-common::placeholder {
