--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,14 +95,42 @@ body {
   }
 }
 
-#navBar {
-  padding-bottom: calc(constant(safe-area-inset-bottom) + 10px);
-  padding-bottom: calc(env(safe-area-inset-bottom) + 10px);
+.safe-screen {
+  height: 100dvh;
+
+  @media all and (display-mode: standalone) {
+    height: 100vh;
+  }
+}
+
+.safe-bottom {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 .safe-header {
   top: constant(safe-area-inset-top);
   top: env(safe-area-inset-top);
+}
+
+#navBar {
+  padding-bottom: calc(constant(safe-area-inset-bottom) + 10px);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 10px);
+}
+
+#toast-message {
+  top: calc(constant(safe-area-inset-top) + 12px);
+  top: calc(env(safe-area-inset-top) + 12px);
+}
+
+#back-button {
+  top: calc(constant(safe-area-inset-top) + 12px);
+  top: calc(env(safe-area-inset-top) + 12px);
+
+  @media all and (display-mode: standalone) {
+    top: calc(constant(safe-area-inset-top) + 8px);
+    top: calc(env(safe-area-inset-top) + 8px);
+  }
 }
 
 #store-button {
@@ -111,21 +139,8 @@ body {
 }
 
 #message-toast {
-  bottom: calc(constant(safe-area-inset-bottom) + 92px);
-  bottom: calc(env(safe-area-inset-bottom) + 92px);
-}
-
-.safe-bottom {
-  padding-bottom: constant(safe-area-inset-bottom);
-  padding-bottom: env(safe-area-inset-bottom);
-}
-
-.safe-screen {
-  height: 100dvh;
-
-  @media all and (display-mode: standalone) {
-    height: 100vh;
-  }
+  bottom: calc(constant(safe-area-inset-bottom) + 80px);
+  bottom: calc(env(safe-area-inset-bottom) + 80px);
 }
 
 #root {
