--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,8 +4,8 @@
   .navItem {
     @apply flex flex-col items-center gap-[4px];
   }
-  .tooltip {
-    @apply absolute bottom-[-52px] right-[-10px] rounded-[12px] bg-gray-300 p-[12px] text-center text-body-sm text-gray-800 after:absolute after:right-[15px] after:top-[-5px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-300;
+  .share-tooltip {
+    @apply absolute bottom-[-70px] right-[-10px] rounded-[12px] bg-gray-300 p-[12px] text-center text-body-sm text-gray-800 after:absolute after:right-[15px] after:top-[-5px] after:h-0 after:w-0 after:rotate-45 after:border-[8px] after:border-solid after:border-gray-300;
   }
   .circle {
     @apply absolute h-[320px] w-[320px] rounded-[50%] border-[5px] border-white bg-none;
