--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
 @import url('../styles/skeleton.css');
 @import url('../styles/header.css');
 @import url('../styles/book.css');
+@import url('../styles/safeArea.css');
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 
@@ -93,59 +94,6 @@ body {
   @media screen and (min-width: 430px) {
     width: 450px;
   }
-}
-
-.safe-screen {
-  height: 100dvh;
-
-  @media all and (display-mode: standalone) {
-    height: 100vh;
-  }
-}
-
-.safe-bottom {
-  padding-bottom: constant(safe-area-inset-bottom);
-  padding-bottom: env(safe-area-inset-bottom);
-}
-
-.safe-header {
-  top: constant(safe-area-inset-top);
-  top: env(safe-area-inset-top);
-}
-
-#navBar {
-  padding-bottom: calc(constant(safe-area-inset-bottom) + 10px);
-  padding-bottom: calc(env(safe-area-inset-bottom) + 10px);
-}
-
-#toast-message {
-  top: calc(constant(safe-area-inset-top) + 12px);
-  top: calc(env(safe-area-inset-top) + 12px);
-}
-
-#back-button {
-  top: calc(constant(safe-area-inset-top) + 12px);
-  top: calc(env(safe-area-inset-top) + 12px);
-
-  @media all and (display-mode: standalone) {
-    top: calc(constant(safe-area-inset-top) + 8px);
-    top: calc(env(safe-area-inset-top) + 8px);
-  }
-}
-
-#store-button {
-  top: calc(constant(safe-area-inset-top) + 24px);
-  top: calc(env(safe-area-inset-top) + 24px);
-}
-
-#message-toast {
-  bottom: calc(constant(safe-area-inset-bottom) + 80px);
-  bottom: calc(env(safe-area-inset-bottom) + 80px);
-}
-
-#start-button {
-  bottom: calc(constant(safe-area-inset-bottom) + 24px);
-  bottom: calc(env(safe-area-inset-bottom) + 24px);
 }
 
 #root {
