[Style/#72]: error, 404 디자인 반영

--- a/src/styles/safeArea.css
+++ b/src/styles/safeArea.css
@@ -36,6 +36,11 @@
   }
 }
 
+#back-fixed {
+  top: calc(constant(safe-area-inset-top) + 24px);
+  top: calc(env(safe-area-inset-top) + 24px);
+}
+
 #store-button {
   top: calc(constant(safe-area-inset-top) + 24px);
   top: calc(env(safe-area-inset-top) + 24px);
