--- a/src/styles/safeArea.css
+++ b/src/styles/safeArea.css
@@ -65,3 +65,8 @@
   bottom: calc(constant(safe-area-inset-bottom) + 24px);
   bottom: calc(env(safe-area-inset-bottom) + 24px);
 }
+
+#no-review {
+  bottom: calc(constant(safe-area-inset-bottom) + 24px);
+  bottom: calc(env(safe-area-inset-bottom) + 24px);
+}
