--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,13 @@
 @import url('../styles/components.css');
-@import url('../styles/inputs.css');
-@import url('../styles/markdown.css');
-@import url('../styles/tags.css');
-@import url('../styles/layouts.css');
-@import url('../styles/theme.css');
 @import url('../styles/buttons.css');
-@import url('../styles/text.css');
+@import url('../styles/inputs.css');
+@import url('../styles/tags.css');
+@import url('../styles/markdown.css');
+@import url('../styles/theme.css');
 @import url('../styles/skeleton.css');
 @import url('../styles/header.css');
-@import url('../styles/book.css');
+@import url('../styles/layouts.css');
+@import url('../styles/tooltip.css');
 @import url('../styles/safeArea.css');
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
