--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,6 +112,32 @@ body {
   }
 }
 
+#storybook-root {
+  margin: 0;
+  width: 100vw;
+  position: relative;
+  display: flex;
+  overflow: auto;
+
+  width: 450px;
+}
+
+#storybook-docs {
+  height: fit-content;
+  width: 100%;
+}
+
+.docs-story {
+  width: 450px;
+}
+
+body:has(#storybook-docs) {
+  height: 100vh;
+  width: 100%;
+  overflow: auto;
+  background-color: #f8f8f8;
+}
+
 /* type=date input icon 색상 세팅 */
 input[type='date']::-webkit-calendar-picker-indicator {
   filter: invert(74%) sepia(6%) saturate(146%) hue-rotate(184deg)
