[Refactor/#116]: useScroll 개선 및 safari z-index 이슈 해결

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,7 @@ body {
   position: relative;
   display: flex;
   overflow: auto;
+  -webkit-transform:translate3d(0,0,0);
 
   /* PC view setting */
   @media screen and (min-width: 430px) {
